@@ -102,7 +102,7 @@ require("lattice")
 qqmath(fm1, id=0.05)
 if (require("ggplot2")) {
     ## we can create the same plots using ggplot2 and the fortify() function
-    fm1F <- fortify(fm1)
+    fm1F <- fortify.merMod(fm1)
     ggplot(fm1F, aes(.fitted,.resid)) + geom_point(colour="blue") +
            facet_grid(.~Sex) + geom_hline(yintercept=0)
     ## note: Subjects are ordered by mean distance
